# tts-vocaloid

./: .gitignore  LICENSE  README.md  install.sh  notes.py  requirements.txt
electron-app/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
examples/: make_hello_wav.py
tests/: conftest.py  test_export_ust.py  test_note_extraction.py  test_syllables.py
tts2sv/: __init__.py  audio.py  cli.py  export_musicxml.py  setup.cfg  text.py  utils.py
tts2sv/tests/: test_alignment.py
tts2sv/tts2sv/: align.py  export_midi.py  export_musicxml.py  export_ust.py  text.py
