[metadata]
name = tts2sv
version = 0.1.0
description = Convert TTS lines into SynthV/UTAU-ready melodies
long_description = file: README.md
long_description_content_type = text/markdown
author = tts2sv contributors
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    librosa>=0.10
    soundfile>=0.12
    numpy>=1.23
    music21>=8.1
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    tts2sv = tts2sv.cli:main

[tool:pytest]
addopts = -q
